--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,6 @@
-[package]
-name = "cosyrs"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+resolver = "3"
+members = [ "rosy_lib",
+    "rosy_transpiler"
+]
 
-[dependencies]
-anyhow = "1.0.99"
-pest = "2.7"
-pest_derive = "2.7"
-lazy_static = "1.4"
-colored = "3.0.0"
