--- a/rosy_transpiler/Cargo.toml
+++ b/rosy_transpiler/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.99"
-pest = "2.7"
-pest_derive = "2.7"
-lazy_static = "1.4"
-colored = "3.0.0"
+anyhow.workspace = true
+pest.workspace = true
+pest_derive.workspace = true
+lazy_static.workspace = true
+colored.workspace = true
