feat: Basic type forcing

--- a/rosy_transpiler/Cargo.toml
+++ b/rosy_transpiler/Cargo.toml
@@ -9,3 +9,4 @@ pest.workspace = true
 pest_derive.workspace = true
 lazy_static.workspace = true
 colored.workspace = true
+rosy_lib.workspace = true
