feat: Reduced complexity of type checking to rely on `rosy_lib`

--- a/rosy_transpiler/Cargo.toml
+++ b/rosy_transpiler/Cargo.toml
@@ -10,3 +10,4 @@ pest_derive.workspace = true
 lazy_static.workspace = true
 colored.workspace = true
 rosy_lib.workspace = true
+impls.workspace = true
