--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0"
 pest = "2.7"
 pest_derive = "2.7"
 lazy_static = "1.4"
-colored = "3.0"
 rosy_lib = { path = "rosy_lib" }
 impls = "1.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
