--- a/rosy_transpiler/Cargo.toml
+++ b/rosy_transpiler/Cargo.toml
@@ -8,6 +8,7 @@ anyhow.workspace = true
 pest.workspace = true
 pest_derive.workspace = true
 lazy_static.workspace = true
-colored.workspace = true
 rosy_lib.workspace = true
 impls.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
