--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ impls = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
 serial_test = "3.2"
+mpi = "0.8"
