--- a/rosy_ide_tools/rosy-vscode-extension/language-configuration.json
+++ b/rosy_ide_tools/rosy-vscode-extension/language-configuration.json
@@ -44,7 +44,7 @@
   },
   "indentationRules": {
     "decreaseIndentPattern": "^\\s*(\\}|\\)|\\]|END|ENDIF|ENDLOOP|ENDFOR|ENDWHILE|ELSE).*$",
-    "increaseIndentPattern": "^.*\\{[^}\"']*$|^.*\\([^)\"']*$|^.*\\[[^\\]\"']*$|^.*(BEGIN|THEN|ELSE|LOOP|FOR|WHILE|PROCEDURE|FUNCTION)\\s*$"
+    "increaseIndentPattern": "^.*\\{[^}\"']*$|^.*\\([^)\"']*$|^.*\\[[^\\]\"']*$|^.*(BEGIN|THEN|ELSE|LOOP|FOR|WHILE|PROCEDURE|FUNCTION|ENDFUNCTION|ENDPROCEDURE)\\s*$"
   },
   "surroundingPairs": [
     [
