--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,16 @@
 [workspace]
 resolver = "3"
-members = [ "rosy_lib",
+members = [
     "rosy_transpiler",
-    "rosy_lib",
-    "rosy_output",
     "rosy_ide_tools/vscode_extension_generator"
 ]
+exclude = [ ".rosy_output" ]
 
 [workspace.dependencies]
 anyhow = "1.0"
 pest = "2.7"
 pest_derive = "2.7"
 lazy_static = "1.4"
-rosy_lib = { path = "rosy_lib" }
 impls = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
