--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "3"
 members = [
-    "rosy_transpiler",
+    "rosy",
     "rosy_ide_tools/vscode_extension_generator"
 ]
 exclude = [ ".rosy_output" ]
