feat: Further improved portability of command, added arguments and subcommands, improved testing framework to be non-serial with testing cache directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 /target
 /.direnv
+/cosy_examples
 .envrc
 */target
-/outputs
 .rosy_output
+.rosy_test_cache
 rosy_output
-cosy-spec.md
 manual.md
 *.out
 *.lis
