--- a/rosy/Cargo.toml
+++ b/rosy/Cargo.toml
@@ -12,6 +12,8 @@ impls.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 serial_test.workspace = true
+clap = { version = "4.5", features = ["derive"] }
+
 # Dependencies that were in rosy_lib
 mpi.workspace = true
 bincode.workspace = true
